--- a/resources/sass/_user.scss
+++ b/resources/sass/_user.scss
@@ -18,9 +18,9 @@
 
 .userListTable {
     width: 100%;
-    .ultDateColumn {
-        width: 125px;
-    }
+    // .ultDateColumn {
+    //     width: 125px;
+    // }
 
     th.ultDateColumn .ultWrapper,
     th.utlSessinColumn .ultWrapper {
